--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <!-- 기본색상들 -->
+    <color name="colorPrimary">#FFFFFF</color>
+    <color name="colorPrimaryDark">#D8B4ED</color>
+    <color name="colorAccent">#D8B4ED</color>
+
+    <!-- 버스관련 -->
+    <color name="bus_green">#23DA23</color>
+    <color name="bus_red">#DF1616</color>
+    <color name="bus_blue">#1717DC</color>
+    <color name="bus_yellow">#FFE600</color>
+
+    <!-- 혼잡도관련 -->
+    <color name="busy_empty">#23DA23</color>
+    <color name="busy_half">#FFE600</color>
+    <color name="busy_full">#DF1616</color>
 </resources>
