--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -4,16 +4,16 @@
     <item
         android:id="@+id/bottomNavi_bookmark"
         android:icon="@drawable/ic_launcher_foreground"
-        android:title="즐겨찾기"/>
+        android:title="@string/bookmark"/>
 
     <item
         android:id="@+id/bottomNavi_map"
         android:icon="@drawable/ic_launcher_foreground"
-        android:title="주변 정류장"/>
+        android:title="@string/bottomNavi_map" />
 
     <item
         android:id="@+id/bottomNavi_alarm_off"
         android:icon="@drawable/ic_launcher_foreground"
-        android:title="하차알람"/>
+        android:title="@string/alarm_off"/>
 
 </menu>
