--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -1,16 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <!-- 즐겨찾기 -->
     <item
         android:id="@+id/bottomNavi_bookmark"
-        android:icon="@drawable/ic_launcher_foreground"
+        android:icon="@drawable/ic_bookmark"
         android:title="@string/bookmark"/>
 
+    <!-- 주변 정류장 -->
     <item
         android:id="@+id/bottomNavi_map"
-        android:icon="@drawable/ic_launcher_foreground"
+        android:icon="@drawable/ic_location"
         android:title="@string/bottomNavi_map" />
 
+    <!-- 하차알림 이미지 수정 필요 -->
     <item
         android:id="@+id/bottomNavi_alarm_off"
         android:icon="@drawable/ic_launcher_foreground"
