--- a/app/src/main/res/layout/recyclerview_bus_item.xml
+++ b/app/src/main/res/layout/recyclerview_bus_item.xml
@@ -5,7 +5,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="8dp"
     android:layout_marginBottom="8dp"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:background="@color/button_gray">
 
     <ImageView
         android:id="@+id/bus_state"
