--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,4 +18,9 @@
     <color name="busy_empty">#23DA23</color>
     <color name="busy_half">#FFE600</color>
     <color name="busy_full">#DF1616</color>
+
+    <!--배경색 관련-->
+    <color name="button_gray">#e0e0e0</color>
+    <color name="background_gray">#d0d0d0</color>
+
 </resources>
