--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,16 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+
+    </style>
+
+    <!-- NavigationView 스타일 -->
+    <style name="NavigationViewTheme" parent="AppTheme">
+        <item name="listPreferredItemHeightSmall">60dp</item>
+        <item name="itemIconSize">25dp</item>
+        <item name="itemTextColor">#aa777777</item>
+        <item name="itemIconTint">@color/colorAccent</item>
+        <item name="android:textSize">15sp</item>
     </style>
 
 </resources>
