--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,30 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<androidx.drawerlayout.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/drawerLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
-
-    <androidx.drawerlayout.widget.DrawerLayout
-        android:id="@+id/layout_drawer"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+    tools:openDrawer="start">
 
         <!-- Closed -->
-        <include
-            layout="@layout/activity_main_contents"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+        <include layout="@layout/activity_main_contents"/>
 
         <!-- Opened -->
-        <ListView
+        <com.google.android.material.navigation.NavigationView
             android:id="@+id/drawer"
-            android:layout_width="300dp"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="start"
-            android:background="@color/colorPrimaryDark"/>
+            android:theme="@style/NavigationViewTheme"
+            app:itemHorizontalPadding="30dp"
+            app:headerLayout="@layout/drawer_header"
+            app:menu="@menu/drawer"/>
 
-    </androidx.drawerlayout.widget.DrawerLayout>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.drawerlayout.widget.DrawerLayout>
