--- a/app/src/main/res/layout/recyclerview_bookmark.xml
+++ b/app/src/main/res/layout/recyclerview_bookmark.xml
@@ -45,7 +45,8 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            android:src="@drawable/ic_bookmark"/>
+            android:src="@drawable/ic_bookmark"
+            android:tint="@color/busy_half"/>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -53,12 +54,14 @@
 
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/bus_bookmark"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:padding="10dp"
         app:layout_constraintTop_toBottomOf="@+id/busstop_bookmark"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:background="#d0d0d0"/>
+        android:background="#d0d0d0"
+        android:visibility="invisible"/>
 
 
 
