--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -28,10 +28,13 @@
             android:gravity="center_vertical"
             android:background="@drawable/search_border"
             android:hint="@string/bus_search"
+            android:inputType="phone"
             android:textSize="15sp"
             android:textColor="#aa777777"
             android:padding="8dp"
-            android:paddingStart="15dp"/>
+            android:paddingStart="15dp">
+            <requestFocus/>
+        </EditText>
 
     </androidx.appcompat.widget.Toolbar>
 
