--- a/app/src/main/res/menu/station_menu.xml
+++ b/app/src/main/res/menu/station_menu.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         app:showAsAction="always"
-        android:id="@+id/bus_info"
-        android:icon="@drawable/ic_info"
-        android:title="버스정보" />
+        android:id="@+id/bookmark"
+        android:iconTint="#CCCCCC"
+        android:icon="@drawable/ic_bookmark"
+        android:title="즐겨찾기" />
 </menu>
