--- a/app/src/main/res/layout/fragment_alarm.xml
+++ b/app/src/main/res/layout/fragment_alarm.xml
@@ -27,8 +27,8 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@+id/search_bus_button"
-        app:layout_constraintLeft_toLeftOf="parent"/>
-<!--        android:visibility="invisible"-->
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginTop="40dp"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
