--- a/app/src/main/res/layout/recyclerview_bookmark.xml
+++ b/app/src/main/res/layout/recyclerview_bookmark.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="5dp">
 
@@ -48,10 +48,7 @@
             android:src="@drawable/ic_bookmark"
             android:tint="@color/busy_half"/>
 
-
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/bus_bookmark"
@@ -60,9 +57,6 @@
         android:padding="10dp"
         app:layout_constraintTop_toBottomOf="@+id/busstop_bookmark"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:background="#d0d0d0"
-        android:visibility="invisible"/>
-
-
+        android:background="@color/background_gray"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
