--- a/app/src/main/res/layout/recyclerview_bus_item.xml
+++ b/app/src/main/res/layout/recyclerview_bus_item.xml
@@ -19,13 +19,15 @@
         android:src="@drawable/ic_bus" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
-    android:id="@+id/bus_info"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    app:layout_constraintLeft_toRightOf="@+id/bus_state"
-    app:layout_constraintTop_toTopOf="parent"
-    android:layout_marginLeft="10dp"
-    android:orientation="vertical">
+        android:id="@+id/bus_info"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/bus_time"
+        android:layout_marginLeft="10dp"
+        android:orientation="vertical">
 
     <TextView
         android:id="@+id/bus_num"
@@ -33,8 +35,10 @@
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
+        android:ems="4"
         android:text="버스 번호"
-        android:textSize="30dp"/>
+        android:textSize="30dp"
+        android:gravity="right"/>
 
     <TextView
         android:id="@+id/bus_destination"
@@ -43,7 +47,8 @@
         app:layout_constraintRight_toRightOf="@id/bus_num"
         app:layout_constraintTop_toBottomOf="@id/bus_num"
         android:text="~ 방면"
-        android:textSize="16dp"/>
+        android:textSize="16dp"
+        android:gravity="right"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -51,28 +56,36 @@
         android:id="@+id/bus_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintLeft_toRightOf="@+id/bus_info"
+        app:layout_constraintRight_toLeftOf="@+id/bus_alarm"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginLeft="20dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginRight="10dp"
         android:orientation="vertical">
 
         <TextView
             android:id="@+id/bus_first"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/bus_second"
             android:text="도착 시간1"
-            android:textSize="24dp"/>
+            android:textSize="20dp"
+            android:ems="5"
+            android:gravity="right"/>
 
         <TextView
             android:id="@+id/bus_second"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             app:layout_constraintRight_toRightOf="@id/bus_first"
             app:layout_constraintTop_toBottomOf="@id/bus_first"
-            android:textSize="24dp"
-            android:text="도착 시간2"/>
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:textSize="20dp"
+            android:ems="5"
+            android:text="도착 시간2"
+            android:gravity="right"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
