--- a/app/src/main/res/layout/fragment_alarm.xml
+++ b/app/src/main/res/layout/fragment_alarm.xml
@@ -3,13 +3,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:padding="30dp">
+    android:padding="30dp"
+    android:background="@color/colorPrimary">
 
     <AutoCompleteTextView
         android:id="@+id/search_bus_auto"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:hint="버스 번호를 입력해주세요"
+        android:completionThreshold="2"
         android:layout_marginTop="10dp"
         android:ems="12"
         app:layout_constraintTop_toTopOf="parent"
@@ -23,12 +25,23 @@
         app:layout_constraintTop_toTopOf="parent"
         android:src="@drawable/ic_bus"/>
 
+
+    <View
+        android:id="@+id/guideline"
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:layout_marginTop="20dp"
+        android:background="#33777777"
+        app:layout_constraintTop_toBottomOf="@id/search_bus_button"/>
+
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/station_list"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@+id/search_bus_button"
+        app:layout_constraintTop_toBottomOf="@+id/guideline"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginTop="40dp"/>
+        android:layout_marginTop="40dp"
+        android:visibility="gone"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
