--- a/app/src/main/res/layout/recyclerview_bus_item.xml
+++ b/app/src/main/res/layout/recyclerview_bus_item.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="80dp"
+    android:layout_height="wrap_content"
+    android:id="@+id/current_businfo"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:padding="8dp"
     android:layout_marginBottom="8dp"
@@ -97,7 +98,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:src="@drawable/ic_alarm" />
+        android:src="@drawable/ic_alarm"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
