--- a/app/src/main/res/layout/recyclerview_bookmark.xml
+++ b/app/src/main/res/layout/recyclerview_bookmark.xml
@@ -8,10 +8,11 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/busstop_bookmark"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="80dp"
         android:padding="8dp"
         android:layout_marginBottom="8dp"
-        android:background="#e0e0e0"
+        android:background="@drawable/button_round"
+        android:backgroundTint="#F2E7F4"
         android:orientation="horizontal"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent">
@@ -57,6 +58,6 @@
         android:padding="10dp"
         app:layout_constraintTop_toBottomOf="@+id/busstop_bookmark"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:background="@color/background_gray"/>
+        android:background="#88F3E5F5"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
