--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,16 +6,26 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-
     </style>
 
     <!-- NavigationView 스타일 -->
-    <style name="NavigationViewTheme" parent="AppTheme">
+    <style name="NavigationViewTheme">
         <item name="listPreferredItemHeightSmall">60dp</item>
         <item name="itemIconSize">25dp</item>
         <item name="itemIconTint">@color/colorAccent</item>
         <item name="itemTextColor">#cc777777</item>
         <item name="android:textSize">15sp</item>
+        <item name="android:background">@color/colorPrimary</item>
+    </style>
+
+    <!-- search 관련 EditText 스타일 -->
+    <style name="searchBox">
+        <item name="android:padding">8dp</item>
+        <item name="android:paddingStart">20dp</item>
+        <item name="android:textSize">15sp</item>
+        <item name="android:textColor">@color/colorNormal</item>
+        <item name="android:background">@drawable/search_border</item>
+        <item name="android:layout_marginHorizontal">30dp</item>
     </style>
 
 </resources>
