--- a/app/src/main/res/layout/activity_main_contents.xml
+++ b/app/src/main/res/layout/activity_main_contents.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -9,6 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="@color/colorPrimary"
+        android:elevation="1dp"
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
@@ -22,43 +24,17 @@
             android:id="@+id/search"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="30dp"
-            android:background="@drawable/search_border"
             android:text="@string/search"
-            android:textSize="15sp"
-            android:textColor="#aa777777"
-            android:padding="8dp"
-            android:paddingStart="15dp"/>
+            style="@style/searchBox"/>
 
     </androidx.appcompat.widget.Toolbar>
 
-    <!-- 구분선 -->
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:background="#33777777"
-        app:layout_constraintBottom_toBottomOf="@id/toolbar"
-        app:layout_constraintLeft_toLeftOf="parent"/>
-
-    <!--
-    - 초기 화면은 원래 즐겨찾기
-    - name 변경 필요
-    -->
-    <fragment
+    <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fragment"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:name="com.bhsd.bustayo.BookmarkFragment"
         app:layout_constraintTop_toBottomOf="@id/toolbar"
         app:layout_constraintBottom_toTopOf="@id/bottomNavigation"/>
-
-    <!-- 구분선 -->
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:background="#33777777"
-        app:layout_constraintBottom_toBottomOf="@id/fragment"
-        app:layout_constraintLeft_toLeftOf="parent"/>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNavigation"
@@ -67,8 +43,7 @@
         android:background="@color/colorPrimary"
         app:itemTextColor="@drawable/highlight"
         app:itemIconTint="@drawable/highlight"
-        app:menu="@menu/bottom_navigation"
-        app:layout_constraintTop_toBottomOf="@id/fragment"
+        app:menu="@menu/bottom_nav_item"
         app:layout_constraintBottom_toBottomOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
