--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -11,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="@color/colorPrimary"
+        android:elevation="1dp"
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
@@ -24,46 +25,25 @@
             android:id="@+id/searchText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="30dp"
-            android:gravity="center_vertical"
-            android:background="@drawable/search_border"
             android:hint="@string/bus_search"
             android:inputType="phone"
-            android:textSize="15sp"
-            android:textColor="#aa777777"
-            android:padding="8dp"
-            android:paddingStart="15dp">
+            style="@style/searchBox">
             <requestFocus/>
         </EditText>
 
     </androidx.appcompat.widget.Toolbar>
-
-    <!-- 구분선 -->
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:background="#33777777"
-        app:layout_constraintBottom_toBottomOf="@id/toolbar"
-        app:layout_constraintLeft_toLeftOf="parent"/>
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tabLayout"
         android:layout_width="match_parent"
         android:layout_height="55dp"
         android:background="@color/colorPrimary"
+        android:elevation="2dp"
         app:tabIconTint="@drawable/highlight"
         app:tabTextColor="@drawable/highlight"
         app:tabInlineLabel="true"
         app:tabIndicatorHeight="3dp"
         app:layout_constraintTop_toBottomOf="@id/toolbar"
-        app:layout_constraintLeft_toLeftOf="parent"/>
-
-    <!-- 구분선 -->
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:background="#33777777"
-        app:layout_constraintBottom_toBottomOf="@id/tabLayout"
         app:layout_constraintLeft_toLeftOf="parent"/>
 
     <androidx.viewpager.widget.ViewPager
