--- a/app/src/main/res/layout/recycler_search_bus.xml
+++ b/app/src/main/res/layout/recycler_search_bus.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="15dp"
-    android:layout_marginStart="3dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:paddingHorizontal="25dp"
+    android:paddingVertical="15dp">
 
     <TextView
         android:id="@+id/searchBusNumR"
@@ -18,7 +19,7 @@
     <TextView
         android:id="@+id/searchBusAreaR"
         android:text="서울"
-        android:textColor="#cc777777"
+        android:textColor="@color/colorNormalDark"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -27,7 +28,7 @@
     <TextView
         android:id="@+id/searchBusTypeR"
         android:text="지선버스"
-        android:textColor="#cc777777"
+        android:textColor="@color/colorNormalDark"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
