--- a/app/src/main/res/layout/recycler_search_footer.xml
+++ b/app/src/main/res/layout/recycler_search_footer.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
-        android:text="버스 검색기록 삭제"
-        android:textColor="#cc777777"/>
+        android:text="@string/delete_bus_history"
+        android:textColor="@color/colorNormal"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
