--- a/app/src/main/res/layout/fragment_bookmark.xml
+++ b/app/src/main/res/layout/fragment_bookmark.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="#ffffff">
+    android:background="#ffffff"
+    android:layout_marginTop="10dp">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/bookmark"
