즐겨찾기 화면에서 각 버스의 즐겨찾기를 설정할 수 없게함, 로그인 기능 구현

--- a/app/src/main/res/layout/recyclerview_bookmark.xml
+++ b/app/src/main/res/layout/recyclerview_bookmark.xml
@@ -47,7 +47,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             android:src="@drawable/ic_bookmark"
-            android:tint="@color/busy_half"/>
+            android:tint="#C58CE6"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
