--- a/app/src/main/res/layout/fragment_alarm.xml
+++ b/app/src/main/res/layout/fragment_alarm.xml
@@ -23,7 +23,17 @@
         android:layout_height="70dp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        android:tint="#C58CE6"
         android:src="@drawable/ic_bus"/>
+
+    <ImageView
+        android:id="@+id/busColor"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:tint="#A84BDF"
+        android:src="@drawable/ic_bus_"/>
 
 
     <View
